# StockMarketBar

./: .gitignore  README.md  docker-compose.yml  gitignore
api/: Dockerfile  Program.cs  StockMarketBarAPI.csproj
api/Controllers/: PricesController.cs
backend/: CMakeLists.txt  Dockerfile
backend/include/StockMarketBar/: stock_market_bar.hpp
backend/src/: main.cpp  stock_market_bar.cpp
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  StockMarketBar.css  StockMarketBar.tsx  index.tsx
